将流式接口抽象到领域层
